--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   });
 </script>
 
+
 <!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 
 <!-- CSS Reset -->
