--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
   <!-- Milligram CSS minified -->
   <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   <script src="http://cdn.rawgit.com/hammerjs/touchemulator/master/touch-emulator.js"></script>
-   <script>
+   <!-- <script>
    TouchEmulator();
-   </script>
+   </script> -->
   <meta charset="utf-8">
   <title>ContentHub</title>
   <base href="/">
